feat!: Upgrade to 3.3.0
[FEAT]
* Can now login with Google/Github Oauth 2.0

[TECH]
* Switch DBMS : MySQL -> PostgreSQL (13+ compatibility)
* Angular upgraded (12.2)
* Spring-boot updated (2.5)

BREAKING CHANGE: underlying DBMS used is now PostgreSQL